--- a/src/views/producto.html
+++ b/src/views/producto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/static/css/style.css">
-    <script src="../public/static/js/style.js"></script>
+    
     <title>Tienda | productos</title>
 </head>
 <body>
@@ -13,37 +13,49 @@
         <h1>productos</h1>
     </header>
 
+    <div class="carrito">
+        <a href="#"><img src="../public/img/bx-cart-add.svg" alt="carrito de compras"></a>
+        <span id="contador">0</span>
+    </div>
+
     <section class="container">
         <article class="card">
             <img src="../public/img/pc1.jpeg" alt="imágenes de computadores a la venta" class="cardImage">
             <span class="precioCard">Precio: $ 2.500.000</span>
-            <button class="btnComprar"><a href="#">comprar</a></button>
+            <button class="btnComprar"><a onclick="incrementarContador()" href="#">comprar</a></button>
+            <button class="btnComprar"><a href="#" onclick="disminuirContador()">eliminar</a></button>
         </article>
         <article class="card">
             <img src="../public/img/pc2.jpeg" alt="imágenes de computadores a la venta" class="cardImage">
             <span class="precioCard">Precio: $ 2.900.000</span>
-            <button class="btnComprar"><a href="#">comprar</a></button>
+            <button class="btnComprar"><a onclick="incrementarContador()" href="#">comprar</a></button>
+            <button class="btnComprar"><a href="#" onclick="disminuirContador()">eliminar</a></button>
         </article>
         <article class="card">
             <img src="../public/img/pc3.jpeg" alt="imágenes de computadores a la venta" class="cardImage">
             <span class="precioCard">Precio: $ 1.500.000</span>
-            <button class="btnComprar"><a href="#">comprar</a></button>
+            <button class="btnComprar"><a onclick="incrementarContador()" href="#">comprar</a></button>
+            <button class="btnComprar"><a href="#" onclick="disminuirContador()">eliminar</a></button>
         </article>
         <article class="card">
             <img src="../public/img/pc4.jpeg" alt="imágenes de computadores a la venta" class="cardImage">
             <span class="precioCard">Precio: $ 2.580.000</span>
-            <button class="btnComprar"><a href="#">comprar</a></button>
+            <button class="btnComprar"><a onclick="incrementarContador()" href="#">comprar</a></button>
+            <button class="btnComprar"><a href="#" onclick="disminuirContador()">eliminar</a></button>
         </article>
         <article class="card">
             <img src="../public/img/pc5.jpeg" alt="imágenes de computadores a la venta" class="cardImage">
             <span class="precioCard">Precio: $ 2.800.000</span>
-            <button class="btnComprar"><a href="#">comprar</a></button>
+            <button class="btnComprar"><a onclick="incrementarContador()" href="#">comprar</a></button>
+            <button class="btnComprar"><a href="#" onclick="disminuirContador()">eliminar</a></button>
         </article>
         <article class="card">
             <img src="../public/img/pc6.jpeg" alt="imágenes de computadores a la venta" class="cardImage">
             <span class="precioCard">Precio: $ 2.000.000</span>
-            <button class="btnComprar"><a href="#">comprar</a></button>
+            <button class="btnComprar"><a onclick="incrementarContador()" href="#">comprar</a></button>
+            <button class="btnComprar"><a href="#" onclick="disminuirContador()">eliminar</a></button>
         </article>
     </section>
 </body>
 </html>
+<script src="../public/static/js/style.js"></script>
